# pythonlearn

./: 11_copy.py  1_collections_learn.py  3_loop.py  5_function.py  6_lambda.py  8_error.py  9_class.py  my_module.py  pyproject.toml  to.md
code/: 12_decarator.py  13_iterator_generator.py  14_with.py  15_async_1.py  15_async_2.py  16_concurrent.py  17_parallel.py  1_collections_learn.py  2_str.py  4_io.py  7_type_hint.py  com_utils.py
data/: out.txt
