[project]
name = "pythonlearn"
version = "0.1.0"
description = ""
authors = [
    {name = "Mr-ZeLong",email = "473840782@qq.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "types-psutil (>=7.2.1.20251231,<8.0.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false